# mask_to_cidr

./: README.md  pyproject.toml
mask_or_cidr/: mask_calculator.py
tests/: test_mask_or_cidr.py
